@@ -1,2 +1,3 @@
 # English strings for sugar-and-salt-solutions
 sugar-and-salt-solutions.name=Sugar and Salt Solutions
+sugar-and-salt-solutions-combined-button.name=Sugar and Salt Solutions With Combined "Remove Salt/Sugar" button
