@@ -1,0 +1,32 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.sugarandsaltsolutions;
+
+import edu.colorado.phet.common.phetcommon.application.PhetApplicationConfig;
+import edu.colorado.phet.common.phetcommon.application.PhetApplicationLauncher;
+import edu.colorado.phet.common.phetcommon.util.function.Function1;
+import edu.colorado.phet.sugarandsaltsolutions.intro.model.IntroModel;
+import edu.colorado.phet.sugarandsaltsolutions.intro.view.RemoveSaltSugarButton;
+import edu.umd.cs.piccolo.PNode;
+
+/**
+ * Main application for PhET's "Sugar and Salt Solutions" simulation but using a combined remove salt sugar button instead of separate, for testing purposes.
+ *
+ * @author Sam Reid
+ */
+public class SugarAndSaltSolutionsApplicationCombinedButton extends SugarAndSaltSolutionsApplication {
+    public SugarAndSaltSolutionsApplicationCombinedButton( PhetApplicationConfig config ) {
+        super( config );
+    }
+
+    protected Function1<IntroModel, PNode> getRemoveSolutesControl() {
+        return new Function1<IntroModel, PNode>() {
+            public PNode apply( IntroModel model ) {
+                return new RemoveSaltSugarButton( model );
+            }
+        };
+    }
+
+    public static void main( String[] args ) {
+        new PhetApplicationLauncher().launchSim( args, SugarAndSaltSolutionsApplication.NAME, SugarAndSaltSolutionsApplicationCombinedButton.class );
+    }
+}
